--- a/style.css
+++ b/style.css
@@ -83,3 +83,20 @@ hr {
 
 input, select {
   vertical-align: middle; }
+
+/* ################# GENERAL ################# */
+/* ################# TYPOGRAPHY ################# */
+/* ################# HEADER ################# */
+.header-img {
+  width: 100%;
+  height: 300px;
+  background-image: url(img/header-img.jpg);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
+
+/* ################# SECTION ################# */
+/* ################# ARTICLES ################# */
+/* ################# FOOTER ################# */
+/* ################# IMG, VIDEO & STUFF ################# */
