--- a/style.scss
+++ b/style.scss
@@ -1,1 +1,29 @@
 @import '_reset';
+
+/* ################# GENERAL ################# */
+
+
+/* ################# TYPOGRAPHY ################# */
+
+
+/* ################# HEADER ################# */
+.header-img {
+	width: 100%;
+	height: 300px;
+	background-image: url(img/header-img.jpg);
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
+/* ################# SECTION ################# */
+
+
+/* ################# ARTICLES ################# */
+
+
+/* ################# FOOTER ################# */
+
+
+/* ################# IMG, VIDEO & STUFF ################# */
